--- a/springboot-jdbcTemplate/pom.xml
+++ b/springboot-jdbcTemplate/pom.xml
@@ -4,9 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <parent>
-        <groupId>com.xjhqre</groupId>
-        <artifactId>spring-boot</artifactId>
-        <version>2.0.0</version>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.4.4</version>
+        <relativePath/> <!-- 设定一个空值将始终从仓库中获取，不从本地路径获取 -->
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
