--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
     <modules>
         <module>springboot-jdbcTemplate</module>
+        <module>springboot-websocket</module>
     </modules>
 
 
