--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>springboot-flowable</module>
         <module>springboot-jackson</module>
         <module>springboot-saToken</module>
+        <module>oss-spring-boot-starter</module>
     </modules>
 
 
